--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>webAppStepByStep</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <buildDirectory>${project.basedir}/target</buildDirectory>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
@@ -31,6 +34,13 @@
             <artifactId>jquery</artifactId>
             <version>3.4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+
 
     </dependencies>
 
